Add JPA repository for parameter.